external-crates/move/crates/move-compiler/tests/development/enums/matching/singleton_match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/singleton_match.move:3:17
  │
3 │     public enum Empty {
  │                 ^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

